[gd_scene load_steps=6 format=2]

[ext_resource path="res://Katana/katana_low_poly/Katana.gltf" type="PackedScene" id=1]
[ext_resource path="res://Katana/Katana.gd" type="Script" id=2]

[sub_resource type="CylinderShape" id=1]
radius = 0.114093

[sub_resource type="Animation" id=2]
resource_name = "Attack"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.7, 0.7, -1 ), Vector3( 1.2, 1.2, 0 ), Vector3( 0, -0.5, -0.6 ), Vector3( 0.7, 0.7, -1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -20, -180, 0 ), Vector3( -50, -250, 0 ), Vector3( 50, -100, 70 ), Vector3( -20, -180, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0.7, 0.7, -1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -20, -180, 0 ) ]
}

[node name="Katana" instance=ExtResource( 1 )]
transform = Transform( -3, -8.97012e-08, 2.46452e-07, 0, 2.81908, 1.02606, -2.62268e-07, 1.02606, -2.81908, 0.7, 0.7, -1 )
script = ExtResource( 2 )

[node name="AttackerDelay" type="Timer" parent="." index="1"]
wait_time = 0.2

[node name="Area" type="Area" parent="." index="2"]

[node name="CollisionShape" type="CollisionShape" parent="Area" index="0"]
transform = Transform( 1, 2.64543e-08, -1.15635e-15, 0, -4.37114e-08, -1, 2.64542e-08, 0.697399, -3.04843e-08, 0.0012258, 0.00433858, 0.172271 )
shape = SubResource( 1 )

[node name="AnimationTimer" type="Timer" parent="." index="3"]
wait_time = 0.7

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="4"]
anims/Attack = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="CanDealDamage" type="Timer" parent="." index="5"]
wait_time = 0.3

[connection signal="timeout" from="AttackerDelay" to="." method="_on_AttackerDelay_timeout"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="AnimationTimer" to="." method="_on_AnimationTimer_timeout"]
[connection signal="timeout" from="CanDealDamage" to="." method="_on_CanDealDamage_timeout"]
